yangui fixes
- Request history – data preview - trim spaces before starting curly bracket
- Request history – data preview - remove angularjs garbage
- Request history – change Fill data tooltip text to better explain button
  function – whole sentence
- Request history – capitalize sent data and received data
- Request history – remove no sent data and no received data labels – instead
  use grayed out sent data, received data with explanation tooltip
- Request history – move API isn’t available warning to left column
- Request history – implement horizontal resize – URL should be squished,
  other elements should stay the same
- Request history – implement fixed table header, in compliance with horizontal
  resize
- Request history – add tooltip with explanation to grayed out buttons
  (both grayed out because of error request or because api is not present)
- Request history – add fill data button even when in case of error request
  and add explanation tooltip to it
- Popup window – restrict dragging popup window into upper DLUX header
- Status bar – move under the API buttons
- Method buttons (GET, POST, PUT, DELETE) – rework into selectbox
- API Buttons – handle button moving when resizing screen
- Section with API tree – make resizable, move API buttons to separate section
- Mountpoint – move mounted APIs from popup window to section with APIs from
  controller
- Mountpoint – when showing mountpoint, hide display Mountpoint button – this
  should also fix problem when reloading mountpoint when one is already
  selecting and getting no mountpoint present alertbox
- Show preview – fix out-of screen window border in case of large amount of data
- Parameterized collections
- Collection groups

--- a/dlux-web/src/less/design.less
+++ b/dlux-web/src/less/design.less
@@ -3,6 +3,11 @@
 	background-color: #808285;
 }
 
+.menu-sidebar{
+    height: auto;
+    min-height: calc(~'100% - 61px');
+}
+
 .navbar-static-side ul li {
 	border-bottom: none !important;
 }
